# SparkFun_ICM-20948_ArduinoLibrary

./: .gitignore  CMakeLists.txt  DMP.md  README.md  keywords.txt  library.properties
examples/: DMPtest.cpp  main.cpp
examples/Arduino/Example10_DMP_FastMultipleSensors/: Example10_DMP_FastMultipleSensors.ino
examples/Arduino/Example11_DMP_Bias_Save_Restore_ESP32/: Example11_DMP_Bias_Save_Restore_ESP32.ino
examples/Arduino/Example11_DMP_Gravity_Oriented_Accelerometer/: Example11_DMP_Gravity_Oriented_Accelerometer.ino
examples/Arduino/Example1_Basics/: Example1_Basics.ino
examples/Arduino/Example1_Basics_I2C/: Example1_Basics_I2C.ino
examples/Arduino/Example1_Basics_SPI/: Example1_Basics_SPI.ino
examples/Arduino/Example2_Advanced/: Example2_Advanced.ino
examples/Arduino/Example2_Advanced_I2C/: Example2_Advanced_I2C.ino
examples/Arduino/Example3_Interrupts/: Example3_Interrupts.ino
examples/Arduino/Example4_WakeOnMotion/: Example4_WakeOnMotion.ino
examples/Example999_I2C_Testing/: Example999_I2C_Testing.ino
examples/Example999_SPI_Testing/: Example999_SPI_Testing.ino
include/: ICM_20948.h
scripts/: projectBuild.sh  projectRun.sh  projectRunDMP.sh
src/: ICM_20948.cpp  ICM_20948.h
src/util/: AK09916_REGISTERS.h  ICM_20948_C.c  ICM_20948_C.h  ICM_20948_DMP.h  ICM_20948_ENUMERATIONS.h  ICM_20948_InvBool.h  ICM_20948_REGISTERS.h  ICM_20948_Sensor.c  ICM_20948_SensorConfig.h  ICM_20948_SensorTypes.h
temp/good I2C startup/: good_i2c_startup.txt
tests/: main.cpp
util/: ICM_20948_C.cpp  ICM_20948_C.h
(+13 files in other folders)
